# domain_block

./: .gitignore  CMakeLists.txt  README.md
UI/domain_block_client/: CMakeLists.txt  config.cpp  config.h  doamin_block.ini  domain_block_client.ini  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rules.cpp  rules.h  utils.hpp
linux/: CMakeLists.txt  config.cpp  domain_block.service  domain_block_service.toml  log.txt  main.cpp  nf_connection.hpp  nf_help.hpp
package/linux/: package.cmake  postinst  postinst.sh  postrm  prerm
package/windows/: service.iss  ui.py
server/: connection.cpp  connection.h  server.cpp  server.h  server.hpp
utils/: common.hpp  log.cpp  log.h
windows/WFP/: CMakeLists.txt
windows/WFP/block/: .clang-format  block.inf  block.sln  block.vcxproj  block.vcxproj.filters  common.h  device.cpp  device.h  driver.cpp  io_callbacks.cpp  io_callbacks.h  rule.cpp  rule.h  utils.cpp  utils.h  wfp.cpp  wfp.h  wfp_callbacks.cpp  wfp_callbacks.h
windows/WFP/libblock/: CMakeLists.txt  libblock.cpp  libblock.h  libblock_common.h
windows/WFP/service/: CMakeLists.txt  config.cpp  config.h  domain_block_service.toml  libblock_common_help.hpp  main.cpp  service.hpp  wfp_connection.hpp  wfp_help.cpp  wfp_help.h  wfp_help.hpp
windows/WFP/test/: CMakeLists.txt  main.cpp  test_driver.cpp  test_service.cpp
windows/WFP/utils/: log.hpp
